[package]
name = "stadal"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heim = "0.0.10"
tokio = { version = "~0.2", features = ["full"] }
log = "0.4.3"
serde = "1.0"
serde_json = "1.0"
chrono = "0.4.5"
fern = "0.6"
dirs = "2.0"

[dependencies.xi-rpc]
path = "rpc"

[workspace]
members = [
  "rpc",
  "trace",
]
