[package]
name = "stadal"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heim = "0.0.10"
tokio = { version = "~0.2", features = ["full"] }

serde = { version = "1.0", features = ["rc"] }
serde_json = "1.0"
serde_derive = "1.0"
futures = "0.3"
dirs = "2.0"
chrono = "0.4.5"

fern = "0.6"
log = "0.4.3"

[dependencies.core-lib]
path = "core-lib"

[dependencies.xi-rpc]
path = "rpc"

[dependencies.xi-trace]
path = "trace"

[dependencies.xrl]
path = "xrl"

[workspace]
members = [
  "rpc",
  "trace",
  "client",
  "core-lib",
  "xrl",
  "stadaljs/native"
]
exclude = [
  "gui/node_modules/stadal/native"
]