[package]
name = "client"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.4.12"
futures = "0.1.27"
log = "0.4.6"
serde = "1.0.92"
serde_derive = "1.0.92"
serde_json = "1.0.39"
tokio = "0.1.21"
tokio-codec = "0.1.1"
tokio-process = "0.2.3"
syntect = { version = "3.2.0", default-features = false }

