[package]
name = "client"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
failure = "0.1.5"
futures = "0.1.27"
log = "0.4.6"
log4rs = "0.8.3"
termion = "1.5.3"
tokio = "0.1.21"
xdg = "2.2.0"
indexmap = "1.0.2"

xrl = { path = "../xrl" }
