[package]
name = "core-lib"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.3"
serde = { version = "1.0", features = ["rc"] }
serde_json = "1.0"
serde_derive = "1.0"

xi-trace = { path = "../trace", version = "0.2.0" }
xi-rpc = { path = "../rpc", version = "0.3.0" }
