[package]
name = "stadal-gui"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "stadal_gui"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
client =  { path = "../../client", version = "0.1.0" }

