[package]
name = "stadal-gui"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "stadal_gui"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
clap = "2.33.0"
failure = "0.1.5"
futures = "0.1.27"
log = "0.4.6"
log4rs = "0.8.3"
termion = "1.5.3"
tokio = "0.1.21"
xdg = "2.2.0"
indexmap = "1.0.2"

serde = { version = "1.0", features = ["rc"] }
serde_json = "1.0"
serde_derive = "1.0"

xrl = { path = "../../xrl" }

client =  { path = "../../client", version = "0.1.0" }

